# nPathway

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/bulk_demo_case_vs_ctrl/: README.md  bulk_matrix_case_ctrl_demo.csv  bulk_metadata_case_ctrl_demo.csv  bulk_reference_demo.gmt
data/scrna_demo_case_vs_ctrl/: README.md  demo_scrna_case_ctrl.h5ad  demo_scrna_obs_preview.csv  scrna_reference_demo.gmt
data/templates/: README.md  bulk_matrix_template.csv  bulk_metadata_template.csv  scrna_obs_template.csv
docs/: discovery_vs_comparison_modes.md  phase1_literature_review.md  phase2_methodology.md  phase3_experimental_design.md  public_reference_stack_design_20260309.md  quickstart_input_guide.md
scripts/: benchmark_fm_advantage.py  benchmark_fm_embeddings.py  benchmark_largescale.py  benchmark_multi_dataset.py  benchmark_perturbation.py  build_dynamic_pathway_dashboard.py  build_public_reference_stack.py  build_reference_priority_panels.py  build_reference_ranking_calibration_panels.py  convert_10x_to_h5ad.py  convert_seurat_to_h5ad.py  extract_bio_programs.py  generate_benchmark_report.py  generate_consolidated_report.py  generate_readme_assets.py  install_npathway_easy.sh  merge_parallel_publication_outputs.py  prepare_public_github_snapshot.sh  run_batch_aware_bulk_workflow.py  run_bulk_dynamic_pathway.py  run_bulk_dynamic_validation_suite.py  run_curated_vs_dynamic_gsea.py  run_expanded_benchmark_suite.py  run_multiseed_benchmark.py  run_pathway_agent_framework.py  run_scrna_easy.py  run_scrna_pseudobulk_dynamic_pathway.py  tune_disc_topn.py  validate_npathway_inputs.py
src/npathway/: __init__.py
src/npathway/agents/: __init__.py  framework.py
src/npathway/cli/: __init__.py  bulk_workflow.py  compare_gsea.py  convert_10x.py  convert_seurat.py  demo.py  main.py  public_references.py  scrna_easy.py  (+1 more)
tests/: conftest.py  test_agent_framework.py  test_attention_network.py  test_benchmarks.py  test_bulk_dynamic_pipeline.py  test_bulk_dynamic_script.py  test_bulk_workflow_cli.py  test_clustering.py  test_compare_gsea_cli.py  test_competitors.py  test_convert_10x_cli.py  test_convert_seurat_cli.py  test_demo_cli.py  test_dynamic_dashboard.py  test_embedding.py  test_enrichment.py  test_ensemble.py  test_expanded_benchmark_suite.py  test_gmt_io.py  test_gsea_comparison.py  test_input_validation.py  test_latest_baselines.py  test_metrics.py  test_msigdb_collections.py  test_pathway_annotation.py  test_project_scripts.py  test_public_references.py  test_real_data.py  test_scrna_easy_cli.py  test_scrna_pseudobulk_script.py  test_soft_membership.py  test_topic_model.py  test_validate_inputs_script.py  test_validation_external_reproducibility.py  test_validation_robustness.py  test_validation_stability_sensitivity.py  test_visualization.py
(+44 files in other folders)
